[package]
name = "emdrive"
version = "0.1.0"
authors = ["Michael Matloka <michal@matloka.com>"]
edition = "2021"
repository = "https://github.com/Twixes/emdrive/"
license = "Apache-2.0"

[dependencies]
num = "0.4.0"
chrono = "0.4.19"
tokio = { version = "1.11.0", features = ["full"] }
hyper = { version = "0.14.13", features = ["http1", "server", "runtime", "tcp", "stream"] }
futures = "0.3.1"
log = "0.4.4"
env_logger = "0.9.0"
arrayvec = "0.7.1"
human-panic = "1.0.3"
serde_urlencoded = "0.7.0"
uuid = "0.8.2"
ulid = { version = "0.4.1", features = ["uuid"] }


[dev-dependencies]
pretty_assertions = "0.7"
criterion = "0.3.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "precommit-hook", "run-cargo-test", "run-cargo-fmt"]
